manifests/downstream/longhorn-crd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
