manifests/downstream/nfs-subdir-external-provisioner.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nfs-subdir-external-provisioner
