manifests/downstream/rook-ceph-cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
