manifests/downstream/rook-ceph-filesystem.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
