manifests/downstream/storageclass-rook-cephfs-ssd-test-pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
