manifests/downstream/storageclass-rook-cephfs-ssd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
