manifests/downstream/storageclass-rook-rbd-hdd-test-pvc.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
