manifests/downstream/storageclass-rook-rbd-hdd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
