manifests/downstream/rook-ceph-dashboard-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: %%CLUSTER%%-issuer
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_ssl_verify off;
spec:
  tls:
   - hosts:
     - rook-ceph.%%CLUSTER%%.%%DOMAIN%%
     secretName: rook-ceph.%%CLUSTER%%.%%DOMAIN%%
  rules:
  - host: rook-ceph.%%CLUSTER%%.%%DOMAIN%%
    http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
           name: rook-ceph-mgr-dashboard
           port: 
             number: 8443
